edition = "2023";
import "google/protobuf/timestamp.proto";

package UMetadata.V1;

/*!
 *  Defines a seismic station.
 */
message Station
{
    // The network code - e.g., UU.
    string network = 1;
    // The station name - e.g., CTU.
    string name = 2;
    // The station's latitude in degrees.  This will be in the  range [-90,90].
    double latitude = 3;
    // The station's longitude in degrees.  This will be in the range [-180, 180).
    double longitude = 4;
    // The station's elevation in meters above sea-level.  This will be in the range
    // [-10,000, 8600] meters.
    double elevation = 5;
    // The UTC time when the station was opened.
    google.protobuf.Timestamp start_time = 6;
    // The UTC time when the station was closed.
    google.protobuf.Timestamp end_time = 7;
    // The UTC time was this station's information was last updated.
    google.protobuf.Timestamp last_modified = 8;
    // The station description - e.g., Camp Tracy, Utah.
    string description = 9 [default = ""];
};
